[gd_scene load_steps=6 format=2]

[ext_resource path="res://thisisno.png" type="Texture" id=1]
[ext_resource path="res://HO1.png" type="Texture" id=2]
[ext_resource path="res://no.png" type="Texture" id=3]
[ext_resource path="res://characters/HO1.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.5, 41 )

[node name="HO1" type="Area2D"]
script = ExtResource( 4 )

[node name="Ho1" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="HO1_col" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 1 )
shape = SubResource( 1 )

[node name="Thisisno" type="Sprite" parent="."]
position = Vector2( 6, -32 )
texture = ExtResource( 1 )

[node name="No" type="Sprite" parent="."]
position = Vector2( -6, -32 )
texture = ExtResource( 3 )

[node name="HO1_lab" type="Label" parent="."]
margin_left = -64.0
margin_top = -67.0
margin_right = 64.0
margin_bottom = -36.0
text = "I want 10 apples.
Bring me 10 apples."

[connection signal="area_entered" from="." to="." method="_on_HO1_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_HO1_area_exited"]
